web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synergychat-web
  labels:
    app: synergychat-web
spec:
  selector:
    matchLabels:
      app: synergychat-web
  template:
    metadata:
      labels:
        app: synergychat-web
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: web-configmap
          image: docker.io/bootdotdev/synergychat-web:latest
          name: synergychat-web
          resources: {}
