api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: NodePort
  selector:
    app: synergychat-wapi
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      nodePort: 30080
